--- a/Portfolio/app/src/main/AndroidManifest.xml
+++ b/Portfolio/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:theme="@style/Theme.CityGuide"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".User.UserDashboard"
+            android:exported="false" />
+        <activity
+            android:name=".Common.SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
