--- a/Ui First/app/src/main/AndroidManifest.xml
+++ b/Ui First/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.UiApp"
         tools:targetApi="31">
         <activity
-            android:name=".IntroActivity"
+            android:name=".Activities.IntroActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
